Reimplement coherent updating